--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+h1 {
+  font-size: 50px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +38,4 @@
     transform: rotate(360deg);
   }
 }
+
